--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "esbuild-jest": "^0.5.0",
     "jest": "^29.4.3",
     "jest-extended": "^3.2.4",
-    "jest-text-transformer": "^1.0.4"
+    "jest-text-transformer": "^1.0.4",
+    "ts-node": "^10.9.1"
   }
 }
